--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 
-* {text-align: center;
+* {
+    text-align: center;
     margin: auto;
+    padding: 10px;
     
     }
 
@@ -16,7 +18,7 @@ h2
 {
     color: rgb(68, 42, 4);
     
-    ;
+
 }
 
 h3
@@ -33,6 +35,7 @@ p
     margin-left: 80px;
     font-family: verdana;
     font-size: 20px;  
+    text-align: left;
    
 }
 
@@ -46,11 +49,13 @@ img
 
 body
 {
-    background-image: url(/secondzxhtml/img/bodyground.png);
+    background-image: url(/img/bodyground.png);
     background-attachment: scroll;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(139, 138, 138);
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 100px;
 
 }
 #skills
@@ -58,25 +63,144 @@ body
     opacity: 0.5;
     filter: alpha(opacity=50); 
 }
-
+/*
 nav
+
 {
-    list-style-type: none;
+     list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: rgb(207, 178, 190);
     display: block;
 }
+*/
 
-a:hover
-{
-    background-color: rgb(134, 124, 114)
-}
-
-a.active {
-    background-color:rgb(134, 124, 114);
+.topnav
+ {
+    overflow: hidden;
+    background-color: #c7c1c1;
     
   }
   
+  
+  /* Style the links inside the navigation bar */
+  .topnav a
+  {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 25px;
+     
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover 
+  {
+    background-color: rgb(119, 117, 117);
+    color: rgb(10, 10, 10);
+    
+  }
+  
+  /* Style the "active" element to highlight the current page */
+  .topnav a.active 
+  {
+    background-color: rgb(247, 140, 163);
+    color: white;
+   
+  }
+  
+  /* Style the search box inside the navigation bar */
+  .topnav input[type=text] 
+  {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+    
+  }
+  
+
+  
+.topnav  a:hover
+{
+    background-color: rgb(134, 124, 114)
+
+    
+}
+/*
+a.active 
+{
+    background-color:rgb(248, 143, 169);
+    
+  }
+ */
+  input
+  {
+    size:"40"; 
+    height:"20"; 
+    width:"60";
+  }
+
+  .flex-container
+  {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap ; /*flex items with no wrap*/
+    justify-content: center;
+    align-items:stretch;
+  }
+ 
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 40px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  .fa-github {
+    background: #3d3939;
+    color: white;
+  }
+  
+  .secinskills p
+{
+font: medium;
+font-family: 'Times New Roman', Times, serif;
+font-size: medium;
+color: black;
+
+}
+.secinskills h3
+{
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+     
+}
+article
+{
+    font: medium;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: medium;
+   
+}
 
 
