--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,48 @@
 
 * {
+    font-family: cursive;
     text-align: center;
     margin: auto;
     padding: 10px;
     
     }
 
-h1
+#header
 {
-    color: rgb(54, 19, 37);
-    border-style: outset; 
+    font-weight: bolder;
+    font-size: xx-large;
+    
+    /*border-style: outset; 
     border: 5px solid rgb(221, 216, 221);
-    border-width: 15px;
-}
-
-h2
-{
-    color: rgb(68, 42, 4);
+    border-width: 15px;*/
+    font-family: cursive;
+    
+    
     
 
+    
 }
 
-h3
+
+.articles h2 
 {
-    color: rgb(15, 9, 1); 
-    
+    color: black;;
+    font-family: cursive;
+    font-size: x-large;
+
+}
+.secinskills h3
+{
+  color: black;
+  font-family: cursive;
+  font-size: larger;
+}
+
+p a
+{
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  color: blue;
 }
 
 p 
@@ -33,52 +51,39 @@ p
     margin-bottom: 100px;
     margin-right: 150px;
     margin-left: 80px;
-    font-family: verdana;
+    font-family: cursive;
     font-size: 20px;  
     text-align: left;
    
 }
 
-img
-{
-    border-image: fill;
-    
-    border-radius: 50%;
 
-}
 
 body
 {
     background-image: url(/img/bodyground.png);
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     margin-left: 200px;
     margin-right: 200px;
     margin-top: 100px;
 
 }
-#skills
-{
-    opacity: 0.5;
-    filter: alpha(opacity=50); 
-}
-/*
-nav
 
-{
-     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(207, 178, 190);
-    display: block;
-}
-*/
 
+#mainfoto
+{
+  border-radius: 50%;
+  opacity: 0.9;
+}
+/*background color */
 .topnav
  {
     overflow: hidden;
-    background-color: #c7c1c1;
+    background-color: lightgray;
+    top: initial;
+    display: block;
     
   }
   
@@ -93,26 +98,27 @@ nav
     padding: 14px 16px;
     text-decoration: none;
     font-size: 25px;
+    font-family: cursive;
      
   }
   
-  /* Change the color of links on hover */
+  /* Change the color of links in the navbar on hover */
   .topnav a:hover 
   {
-    background-color: rgb(119, 117, 117);
+    background-color: darkgray;
     color: rgb(10, 10, 10);
     
   }
   
   /* Style the "active" element to highlight the current page */
-  .topnav a.active 
-  {
-    background-color: rgb(247, 140, 163);
-    color: white;
-   
+  
+  .topnav a.active {
+    background-color: #2196F3;
+    color: rgb(224, 11, 11);
   }
   
   /* Style the search box inside the navigation bar */
+  /*
   .topnav input[type=text] 
   {
     float: right;
@@ -123,39 +129,38 @@ nav
     font-size: 17px;
     
   }
-  
+ */
 
-  
-.topnav  a:hover
-{
-    background-color: rgb(134, 124, 114)
 
-    
-}
+
+
 /*
-a.active 
+.topnav a.active
 {
     background-color:rgb(248, 143, 169);
     
   }
- */
+  */
+/*
   input
   {
     size:"40"; 
     height:"20"; 
     width:"60";
   }
+  */
 
-  .flex-container
+  .flex-container img
   {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap ; /*flex items with no wrap*/
-    justify-content: center;
-    align-items:stretch;
+    border-radius: 50%;
+    opacity: 0.9;
+   
+    width: 25vh;
+    height: 25vh;
+    
+
   }
  
-
   .fa {
     padding: 20px;
     font-size: 30px;
@@ -169,38 +174,66 @@ a.active
       opacity: 0.7;
   }
   .fa-facebook {
-    background: #3B5998;
+    background: darkblue;
     color: white;
   }
   .fa-linkedin {
-    background: #007bb5;
+    background: blue;
     color: white;
   }
   .fa-github {
-    background: #3d3939;
+    background: darkgray;
     color: white;
   }
   
   .secinskills p
 {
-font: medium;
-font-family: 'Times New Roman', Times, serif;
-font-size: medium;
+
+font-family: cursive;
+font-size: large;
 color: black;
+font-weight: bold;
+
 
 }
+
 .secinskills h3
 {
     font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: cursive;
+    
      
 }
-article
+
+
+.article
 {
     font: medium;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: cursive;
     font-size: medium;
    
 }
 
 
+.mymap
+{
+display: block;
+/*block-size: initial;*/
+border-color: gray;;
+opacity: 0.7;
+width: initial;
+height: initial;
+}
+form
+{
+  width: fit-content; 
+  height: fit-content;
+  }
+.secinskills img
+{
+    opacity: 0.5;
+    filter: alpha(opacity=50); 
+    border-radius: 50%;
+    border-color: black;
+    
+}
